lab1/titov_service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titov-service
spec:
  selector:
    app: titov-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
